<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.CalculadoraGorjetaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_fundo_tres"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#00000000"
            android:drawableLeft="@drawable/voltar_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/design_default_color_primary"
            android:padding="13dp"
            android:text="@string/opcao4"
            android:textColor="@color/design_default_color_primary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gorjeta" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entradaGorjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_um_valor"
                android:inputType="number|numberDecimal"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPorcentagem"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/valor_porcentagem"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBarGorjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/gorjeta"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textGorjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FDA73F"
                android:padding="4dp"
                android:text="@string/valor_inicial"
                android:textColor="#9C27B0"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FDA73F"
                android:padding="4dp"
                android:text="@string/valor_inicial"
                android:textColor="#9C27B0"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>