<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60BC8B"
    android:orientation="vertical"
    tools:context=".activity.CaraCoroaTwoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/voltar_24"
            android:drawablePadding="5dp"
            android:padding="20dp"
            android:text="@string/opcao6"
            android:textColor="@color/white" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:background="@drawable/ripple_rounded_button"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cara"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nomeJogadorUm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogador_1_cara"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pontuacaoUm"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="@drawable/ripple_rounded_button"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroa"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nomeJogadorDois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogador_2_coroa"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pontuacaoDois"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/moedaPadraoResult"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/moeda_padrao" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressCaraCoroa"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:max="7"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGirarMoeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rounded_button"
            android:backgroundTint="#FFFFFF"
            android:padding="15dp"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/button_girar_moeda"
            android:textColor="#5FBB8A"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>